tests/e2e/networking/00-create-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-networking
spec:
  finalizers:
  - kubernetes
