tests/e2e/networking/03-delete.yaml
---
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: cloud.redhat.com/v1alpha1
  kind: Frontend
  name: chrome
- apiVersion: cloud.redhat.com/v1alpha1
  kind: FrontendEnvironment
  name: test-networking-environment
- apiVersion: v1
  kind: Namespace
  name: test-networking
